--- a/index.html
+++ b/index.html
@@ -21,7 +21,41 @@
     </script>
     <link rel="stylesheet" href="src/styles.css">
 </head>
+
+
+
+
+
 <body class="bg-[#EBF1FF] text-gray-900 font-sans">
+
+
+
+
+
+<h1 id="rabby"> my name is gollam rabbhy</h1>
+
+<p id="lemonm">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed laudantium corporis velit esse, aperiam repellendus exercitationem quam ipsa laborum inventore?</p>
+
+<ul>
+<li class="nished">rabby</li>
+<li class="nished">rana</li>
+<li class="nished">rony</li>
+<li class="nished">rakib</li>
+<li class="nished">rafi</li>
+<li class="nished">rakibul</li>
+</ul>
+
+
+
+
+
+
+
+
+
+
+<script src="script.js"></script>
+
 
     <header id="header" class="bg-gray-100/70 backdrop-blur-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
