colone for need

--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
 
 
 
-
 <body class="bg-[#EBF1FF] text-gray-900 font-sans">
 
 
 
 
-
-<h1 id="rabby"> my name is gollam rabbhy</h1>
+  <h1 id="rabby"> my name is gollam rabbhy</h1>
 
 <p id="lemonm">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed laudantium corporis velit esse, aperiam repellendus exercitationem quam ipsa laborum inventore?</p>
 
@@ -49,10 +47,7 @@
 
 
 
-
-
-
-
+<script src="index.js"></script>
 
 <script src="script.js"></script>
 
