Save changes before switching to master

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
 <body class="bg-[#EBF1FF] text-gray-900 font-sans">
 
 
-     git@github.com:gollamrabbyfswd/assignment-html-and-css.git
+  <form>
+  <input type="text" placeholder="আপনার নাম" required><br>
+  <input type="email" placeholder="ইমেইল ঠিকানা" required><br>
+  <input type="password" placeholder="পাসওয়ার্ড"><br>
+  <textarea placeholder="বার্তা লিখুন"></textarea><br>
+  <button type="submit">জমা দিন</button>
+</form>
+   <a href="#">google</a>
 
 
   <h1 id="rabby"> my name is gollam rabbhy</h1>
